--- a/scss/ccs_base.scss
+++ b/scss/ccs_base.scss
@@ -76,14 +76,15 @@ body {
                         .shop {}
                         .cantcart {
                             position: absolute;
-                            .cantcart_num{
-                                position: absolute;
-                            }
+                            .cantcart_num{}
                         }
+                    }
+                    .cart_info{
+                        position: absolute;
+                        z-index: 2;
                     }
                 }
                 .footer {
-                    height: 100px;
                     width: 100%;
                     bottom: 0px;
                     left: 0px;
@@ -91,6 +92,9 @@ body {
                 }
                 .fixed {
                     position: fixed;
+                }
+                .absolute {
+                    position: absolute;
                 }
                 .contenido {
                     width: 100%;
@@ -120,7 +124,88 @@ body {
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 
 
-
+/* MODALS BASE */
+body {
+    .contenedor {
+        .modals{
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0px;
+            left: 0px;
+            z-index: 3;
+            display: none;
+            .cont_modals {
+                width: 100%;
+                height: 100%;
+                position: relative;
+                .modal {
+                    position: absolute;
+                    .cont_modal {
+                        width: 100%;
+                        height: 100%;
+                        position: relative;
+                        .titulo {
+                            position: absolute;
+                            z-index: 2;
+                            width: 100%;
+                            top: 0px;
+                            left: 0px;
+                            .cont_titulo{
+                                width: 100%;
+                                text-align: center;
+                                h1{
+                                    display: block;
+                                }
+                                h2{
+                                    display: block;
+                                }
+                            }
+                        }
+                        .close {
+                            position: absolute;
+                            z-index: 3;
+                        }
+                        .cont_info {
+                            position: absolute;
+                            width: 100%;
+                            height: 100%;
+                            overflow-y: auto;
+                            z-index: 1;
+                            .info_modal {}
+                            .padding_01 {}
+                            .padding_02 {}
+                        }
+                        .sub_total {
+                            position: absolute;
+                            z-index: 2;
+                            left: 0px;
+                            .cont_subtotal {
+                                width: 100%;
+                                height: 100%;
+                                position: relative;
+                                .total_detalle{
+                                    .paso_01_sub_total{}
+                                    .paso_03_costo{}
+                                    .paso_03_total{}
+                                }
+                            }
+                        }
+                        .acciones {
+                            width: 100%;
+                            position: absolute;
+                            z-index: 2;
+                            left: 0px;
+                            bottom: 0px;
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS BASE */
 
 
 
@@ -184,6 +269,9 @@ a{
 .clearfix {
 	display: block;
 }/**/
+.hide {
+    display: none;
+}
 .flotar_izq{
 	float:left;
 	display:inline;
