--- a/scss/ccs_colores_01.scss
+++ b/scss/ccs_colores_01.scss
@@ -24,6 +24,10 @@ body{
 
 $header_color: "#fff";
 $header_bottom: "#941C80";
+$header_cart_color: "#941C80";
+$header_cant_cart_color: "#F9DDF3";
+$header_cart_mensaje: "#F9DDF3";
+
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 body {
@@ -37,11 +41,13 @@ body {
                         img {}
                     }
                     .menu_right {
-                        .shop {}
+                        .shop { color: $header_cart_color; }
                         .cantcart {
+                            background: $header_cant_cart_color;
                             .cantcart_num{}
                         }
                     }
+                    .cart_info{ color: $header_cart_mensaje }
                 }
                 .footer {}
                 .contenido {
@@ -62,3 +68,52 @@ body {
     }
 }
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
+
+$modal_global_color: "#999";
+$modal_titulo_border_color: "#999";
+$modal_close_color: "#999";
+$modal_close_back: "none";
+$modal_acciones_border_color: "#999";
+$modal_acciones_background: "#ddd";
+$modal_subtotal_background: "#ddd";
+/* MODALS BASE */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal {
+                    background: $modal_global_color;
+                    .cont_modal {
+                        .titulo {
+                            border-bottom-color: $modal_titulo_border_color;
+                            .cont_titulo{
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close { color: $modal_close_color; background: $modal_close_back }
+                        .cont_info {
+                            .info_modal{}
+                        }
+                        .sub_total {
+                            background: $modal_subtotal_background;
+                            .cont_subtotal {
+                                .total_detalle{
+                                    .paso_01_sub_total{}
+                                    .paso_03_costo{}
+                                    .paso_03_total{}
+                                }
+                            }
+                        }
+                        .acciones {
+                            border-top-color: $modal_acciones_border_color;
+                            background: $modal_acciones_background;
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS BASE */
