--- a/scss/ccs_base.scss
+++ b/scss/ccs_base.scss
@@ -767,7 +767,7 @@ body {
                                                             }
                                                         }
                                                         .add_carro_alert{
-                                                            
+
                                                         }
                                                     }
                                                 }
@@ -775,7 +775,32 @@ body {
                                         }
                                     }
                                     .producto3{
+                                        .cont_pr{
+                                            .cont_prod{
+                                                .nombre{
 
+                                                }
+                                                .descripcion{
+                                                    
+                                                }
+                                                .precio{
+                                                    
+                                                }
+                                            }
+                                        }
+                                        .carro{
+                                            .add_carro_btn{
+                                                .add_info{
+
+                                                }
+                                                .add_logo{
+
+                                                }
+                                            }
+                                            .add_carro_alert{
+                                                
+                                            }
+                                        }
                                     }
                                 }
                             }
