--- a/scss/ccs_base.scss
+++ b/scss/ccs_base.scss
@@ -719,7 +719,7 @@ body {
 
 
 
-/* MODALS PASO CARTA PENDIENTE */
+/* MODALS PASO CARTA */
 body {
     .contenedor {
         .modals{
@@ -737,7 +737,31 @@ body {
                             .info_modal {
                                 .lista_productos {
                                     .producto {
+                                        .cont_producto{
+                                            position: relative;
+                                            .nombre{
 
+                                            }
+                                            .descripcion{
+
+                                            }
+                                            .precio{
+                                                
+                                            }
+                                        }
+                                        .carro{
+                                            .add_carro_btn{
+                                                .add_info{
+
+                                                }
+                                                .add_logo{
+
+                                                }
+                                            }
+                                            .add_carro_alert{
+
+                                            }
+                                        }
                                     }
                                     .producto2 {
                                         table {
@@ -798,7 +822,7 @@ body {
                                                 }
                                             }
                                             .add_carro_alert{
-                                                
+
                                             }
                                         }
                                     }
