--- a/scss/ccs_fontsize_01.scss
+++ b/scss/ccs_fontsize_01.scss
@@ -570,14 +570,16 @@ body {
                                 .lista_productos {
                                     .producto {
                                         .cont_producto{
-                                            .nombre{
+                                            .cont_info_pro{
+                                                .nombre{
 
-                                            }
-                                            .descripcion{
+                                                }
+                                                .descripcion{
 
-                                            }
-                                            .precio{
-                                                
+                                                }
+                                                .precio{
+                                                    
+                                                }
                                             }
                                         }
                                         .carro{
