--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -17,11 +17,11 @@ body{
     }
 }
 
-$header_height: "130px";
-$footer_height: "10px";
+$header_height: 130px;
+$footer_height: 10px;
 
-$padd_footer_fixed: "110px";
-$padd_footer_nofixed: "5px";
+$padd_footer_fixed: 110px;
+$padd_footer_nofixed: 5px;
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 body {
@@ -83,13 +83,13 @@ body {
 }
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 
-$modal_titulo_height: "80px";
-$modal_acciones_height: "55px";
-$modal_subtotal_bottom: "56px";
-$modal_subtotal_height: "50px";
+$modal_titulo_height: 80px;
+$modal_acciones_height: 55px;
+$modal_subtotal_bottom: 56px;
+$modal_subtotal_height: 50px;
 
-$modal_info_modal_padding1: "56px";
-$modal_info_modal_padding2: "106px";
+$modal_info_modal_padding1: 56px;
+$modal_info_modal_padding2: 106px;
 
 /* MODALS BASE */
 body {
@@ -374,6 +374,7 @@ body {
     }
 }
 /* MODALS PASO 02A LOCALES CARRO */
+
 
 
 /* MODALS PASO 02B LOCALES CARRO */
