--- a/css/rcss_fontsize_01.css
+++ b/css/rcss_fontsize_01.css
@@ -1,65 +1,65 @@
 body .contenedor .menu_left .cont_menu_left .menu_info h1 {
-  font-size: "20px";
+  font-size: 20px;
 }
 body .contenedor .menu_left .cont_menu_left .menu_info ul li {
-  font-size: "18px";
+  font-size: 18px;
 }
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 body .contenedor .pagina .cont_pagina .header .menu_right .cantcart .cantcart_num {
-  font-size: "14px";
+  font-size: 14px;
 }
 body .contenedor .pagina .cont_pagina .header .cart_info {
-  font-size: "12px";
+  font-size: 12px;
 }
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 /* MODALS BASE */
 body .contenedor .modals .cont_modals .modal .cont_modal .titulo .cont_titulo h1 {
-  font-size: "20px";
+  font-size: 20px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .titulo .cont_titulo h2 {
-  font-size: "20px";
+  font-size: 20px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtotal .total_detalle .paso_01_sub_total {
-  font-size: "20px";
+  font-size: 20px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtotal .total_detalle .paso_03_costo {
-  font-size: "20px";
+  font-size: 20px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtotal .total_detalle .paso_03_total {
-  font-size: "20px";
+  font-size: 20px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
-  font-size: "16px";
+  font-size: 16px;
 }
 
 /* MODALS BASE */
 /* MODALS PASO 01 CARRO */
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_info {
-  font-size: "22px";
+  font-size: 22px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_precio {
-  font-size: "22px";
+  font-size: 22px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_detalle .promo_detalle_item .promo_detalle_nombre {
-  font-size: "16px";
+  font-size: 16px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_nombre {
-  font-size: "18px";
+  font-size: 18px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .precio {
-  font-size: "18px";
+  font-size: 18px;
 }
 /* MODALS PASO 01 CARRO */
 /* MODALS PASO 02 CARRO */
 body .contenedor .modals .cont_modals .paso_02 .cont_modal .cont_info .info_modal .cont_direccion .direccion_opciones .dir_op .codir .cont_info_dir .title {
-  font-size: "20px";
+  font-size: 20px;
 }
 body .contenedor .modals .cont_modals .paso_02 .cont_modal .cont_info .info_modal .cont_direccion .direccion_opciones .dir_op .codir .cont_info_dir .stitle {
-  font-size: "18px";
+  font-size: 18px;
 }
 body .contenedor .modals .cont_modals .paso_02 .cont_modal .cont_info .info_modal .cont_direccion .direccion_opciones .dir_op .codir .cont_info_dir .alert {
-  font-size: "16px";
+  font-size: 16px;
 }
 /* MODALS PASO 02 CARRO */
 /* MODALS PASO 02A LOCALES CARRO */
