--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -12,7 +12,7 @@ body .contenedor .menu_left .cont_menu_left .menu_info ul li {
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 body .contenedor .pagina .cont_pagina .header {
-  height: "130px";
+  height: 130px;
   border-bottom-style: solid;
   border-bottom-width: 1px;
 }
@@ -36,21 +36,21 @@ body .contenedor .pagina .cont_pagina .header .cart_info {
   bottom: 15px;
 }
 body .contenedor .pagina .cont_pagina .footer {
-  height: "10px";
+  height: 10px;
 }
 body .contenedor .pagina .cont_pagina .contenido .cont_contenido {
   width: 94%;
   max-width: 500px;
-  padding-top: "130px";
+  padding-top: 130px;
 }
 body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_principales .cont_bp .cont_bpi .descripcion {
   line-height: 15px;
 }
 body .contenedor .pagina .cont_pagina .contenido .padd_footer_fixed {
-  padding-bottom: "110px";
+  padding-bottom: 110px;
 }
 body .contenedor .pagina .cont_pagina .contenido .padd_footer_nofixed {
-  padding-bottom: "5px";
+  padding-bottom: 5px;
 }
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
@@ -61,7 +61,7 @@ body .contenedor .modals {
 body .contenedor .modals .cont_modals .modal .cont_modal .titulo {
   border-bottom-style: solid;
   border-bottom-width: 1px;
-  height: "80px";
+  height: 80px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .close {
   width: 34px;
@@ -71,18 +71,18 @@ body .contenedor .modals .cont_modals .modal .cont_modal .close {
   font-size: 34px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal {
-  padding-top: "80px";
+  padding-top: 80px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .padding_01 {
-  padding-bottom: "56px";
+  padding-bottom: 56px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .padding_02 {
-  padding-bottom: "106px";
+  padding-bottom: 106px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .sub_total {
-  bottom: "56px";
+  bottom: 56px;
   width: 100%;
-  height: "50px";
+  height: 50px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtotal .total_detalle {
   text-align: right;
@@ -91,7 +91,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtot
 body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
   border-top-style: solid;
   border-top-width: 1px;
-  height: "55px";
+  height: 55px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   padding: 5px 15px;
