--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -43,6 +43,10 @@ body .contenedor .pagina .cont_pagina .contenido .cont_contenido {
   max-width: 500px;
   padding-top: 130px;
 }
+body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_principales {
+  background-size: cover;
+  margin-bottom: 5px;
+}
 body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_principales .cont_bp .cont_bpi .descripcion {
   line-height: 15px;
 }
