--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -62,7 +62,7 @@ body {
                         padding-top: $header_height;
                         .botones_principales {
                             background-size: cover;
-                            margin-bottom: 5px;
+                            margin-top: 5px;
                             .cont_bp{
                                 .cont_bpi{
                                     .nombre {}
