--- a/css/rcss_base.css
+++ b/css/rcss_base.css
@@ -394,6 +394,19 @@ a {
   display: none;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+  height: 0px;
+}
+
+::-webkit-scrollbar-track-piece {
+  background: #eee;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
 .flotar_izq {
   float: left;
   display: inline;
