--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -26,6 +26,9 @@ body .contenedor .pagina .cont_pagina .header .menu_right .cantcart {
 body .contenedor .pagina .cont_pagina .header .cart_info {
   color: #F9DDF3;
 }
+body .contenedor .pagina .cont_pagina .contenido {
+  background: #e8e8e8;
+}
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 /* MODALS BASE */
 body .contenedor .modals .cont_modals .modal {
