--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -1,3 +1,6 @@
+body .contenedor .menu_left .cont_menu_left .btn_toogle {
+  top: 40px;
+}
 body .contenedor .menu_left .cont_menu_left .menu_info {
   padding: 40px 20px 0px 20px;
 }
