--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -67,7 +67,7 @@ body {
                             .cont_bp{
                                 .cont_bpi{
                                     width: 94%;
-                                    padding: 0% 3%;
+                                    left: 3%;
                                     .nombre {}
                                     .descripcion { line-height: 15px; }
                                     .precio {}
