--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -65,6 +65,7 @@ body {
                             background-size: cover;
                             margin-top: 5px;
                             .cont_bp{
+                                display: block;
                                 .cont_bpi{
                                     width: 80%;
                                     left: 3%;
