--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -783,6 +783,7 @@ body {
                                                         .descripcion {
                                                             display: block;
                                                             padding-left: 5px;
+                                                            line-height: 12px;
                                                         }
                                                         .precio {
                                                             display: block;
